<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">"女王魔镜"</string>
    <string name="home_page">首页</string>
    <string name="shopping_mall">商城</string>
    <string name="order">订单</string>
    <string name="master">大咖</string>
    <string name="common_problem">常见问题</string>
    <string name="payment_setting">支付设置</string>
    <string name="paymentpassword">支付密码</string>
    <string name="message_center">消息中心</string>
    <string name="rcharge">充值</string>
    <string name="customer_service">客服</string>
    <string name="shop">店铺</string>
    <string name="Collection">收藏</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="purchase_immediately">立即购买</string>
    <string name="cancel">取消</string>
    <string name="not_to_see">不让看</string>
    <string name="complete">完成</string>
    <string name="opinion_and_feedback">意见与反馈</string>
    <string name="search_the_shop">搜索店铺</string>
    <string name="app_Valuable_advice">请留下您的宝贵意见或建议，我们将努力改进(不少于五个字)</string>
    <string name="app_Phone">请留下手机号码，以便我们回复您</string>
    <string name="privacy">隐私</string>
    <string name="receiving_notification">接收通知</string>
    <string name="service">Hi,我是您的客服Angle</string>
    <string name="refund_progress">退款进度</string>
    <string name="service_progress">服务进度</string>
    <string name="guarantee_assets">为保证您的资金安全，绑定账户本人的银行卡</string>
    <string name="card_number">卡   号</string>
    <string name="exemption_fee">无需网银/免手续费</string>
    <string name="next_step">下一步</string>
    <string name="real_name">   真实姓名</string>
    <string name="id_card_no">身份证号码</string>
    <string name="phone_number">手机号码</string>
    <string name="trained">我受过专业培训</string>
    <string name="untrained">我未受过专业培训</string>
    <string name="submit">提交</string>
    <string name="add_bank_card">添加银行卡</string>
    <string name="balance">余额</string>
    <string name="money">¥0.00</string>
    <string name="real_name_authentication">实名认证</string>
    <string name="to_authenticate">去认证</string>
    <string name="payment_management">支付管理</string>
    <string name="Setting_the_payment_password">设置支付密码</string>
    <string name="new_receiving_address">新增收货地址</string>
    <string name="card_payment">卡支付</string>
    <string name="face_to_face_payment">该功能用于向商家当面付款</string>
    <string name="want_to_recharge">我要充值</string>
    <string name="view_the_order_record">查看订单记录</string>
    <string name="verification_code">验证码</string>
    <string name="sms_authentication_code">短信验证码</string>
    <string name="no_verification_code">收不到验证码?</string>
    <string name="verification">验证</string>
    <string name="head_portrait">头像</string>
    <string name="user_name">用户名</string>
    <string name="account_password">账号密码</string>
    <string name="beauty_living_room">多米美容生活馆</string>
    <string name="single_product_coupons">单品抵扣劵</string>
    <string name="shop_general_voucher">单品券选择</string>
    <string name="availability">张可用</string>
    <string name="recharge_amount">充值金额：</string>
    <string name="recharge_amount_one">充值金额</string>
    <string name="actual_acquisition">实际获得</string>
    <string name="element">币</string>
    <string name="payment_method">支付方式：</string>
    <string name="wechat">微信</string>
    <string name="input_recharge_amount">请输入您需要充值的金额</string>
    <string name="reading_consent">已阅读并同意</string>
    <string name="recharge_protocol">《会员卡充值协议》</string>
    <string name="view_the_recharge_record"><![CDATA[查看充值记录>>]]></string>
    <string name="be_careful">注：女王卡支持所有加盟店我使用，安全，便捷；</string>
    <string name="recharge_activity">充值优惠活动：</string>
    <string name="family_friend">加我好友时需要验证</string>
    <string name="not_to_see_me">不让他(她)看我的动态</string>
    <string name="not_to_see_her">不看他(她)的动态</string>
    <string name="allow_friends_see">允许朋友查看动态的范围</string>
    <string name="allow_Stranger_see">允许陌生人查看十条动态</string>
    <string name="three_days">最近三天</string>
    <string name="no_historical_Search">暂无历史记录</string>
    <string name="historical_Search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="payment_order">支付订单</string>
    <string name="remaining_time">支付剩余时间</string>
    <string name="wechat_payment">微信支付</string>
    <string name="queen_payment">女王卡支付</string>
    <string name="confirmation_of_payment">确认支付</string>
    <string name="add_phone_number">请输入手机号</string>
    <string name="add_verification">请输入验证码</string>
    <string name="add_password">请输入密码</string>
    <string name="get_message_information">获取短息验证码</string>
    <string name="determine">确定</string>
    <string name="secure_environment">您的账户当前处于安全环境，可直接输入要更换的新手机号</string>
    <string name="change_immediately">立即更换</string>
    <string name="photograph">拍照</string>
    <string name="photo_selection">从相册选择</string>
    <string name="recommendable_projects">推荐项目</string>
    <string name="more"><![CDATA[更多>]]></string>
    <string name="sort">综合排序</string>
    <string name="sales">销量最高</string>
    <string name="distance">距离最近</string>
    <string name="screen">筛选</string>
    <string name="aesthetic_remittance">美学汇</string>
    <string name="manicure">美甲美手</string>
    <string name="hairdressing_custom">美发定制</string>
    <string name="cosmetology_and_body">美容美体</string>
    <string name="semi_permanent">半永久</string>
    <string name="free_shipping">九块九包邮</string>
    <string name="dily_special_price">天天特价</string>
    <string name="good_store">人气好店</string>
    <string name="satisfy">满足挑剔的您</string>
    <string name="personal_information"><![CDATA[个人信息>]]></string>
    <string name="gold_member">黄金会员</string>
    <string name="myposition">我的收货地址</string>
    <string name="myfriend">我的好友</string>
    <string name="more_recommendation">更多推荐</string>
    <string name="myassets">我的资产</string>
    <string name="my_collection">我的收藏</string>
    <string name="follow_shop">关注店铺</string>
    <string name="my_Tracks">我的足迹</string>
    <string name="evaluate">我的评价</string>
    <string name="Coupon">优惠券</string>
    <string name="invincible_coupon">无敌劵</string>
    <string name="queen">女王卡</string>
    <string name="member_management">会员管理</string>
    <string name="notused">0张未使用</string>
    <string name="mywallet">我的钱包</string>
    <string name="my_magic_beans">我的魔豆</string>
    <string name="gift">邀请有奖</string>
    <string name="beauty">成为美业人</string>
    <string name="mine_crown">我要认证</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="customer_service_center">客服中心</string>
    <string name="enter_the_shop">请输入店铺名称或商品名称</string>
    <string name="business_features">商家特色（可多选）</string>
    <string name="new_business">新商家</string>
    <string name="brand_business">品牌商家</string>
    <string name="consumer_security">消费者保障</string>
    <string name="return_goods">7天内退货</string>
    <string name="support_Invoicing">支持开发票</string>
    <string name="beans_to_money">魔豆抵钱</string>
    <string name="price_range">价格区间（元）</string>
    <string name="minimum_price">最低价</string>
    <string name="highest_price">最高价</string>
    <string name="preferential_activities">优惠活动（单选）</string>
    <string name="preferential_merchants">优惠商家</string>
    <string name="discounted_goods">折扣商品</string>
    <string name="full_reduction">满减优惠</string>
    <string name="collar_coupons">进店领劵</string>
    <string name="full_gift">满赠活动</string>
    <string name="scavenging_screening">取消筛选</string>
    <string name="withdrawals">提现</string>
    <string name="account_balance">账户余额</string>
    <string name="fine_balance">余额明细</string>
    <string name="RMB">¥</string>
    <string name="binding_recharge">绑定银行卡充值</string>
    <string name="balance_recharge">余额充值</string>
    <string name="amount_of_cash">提现金额</string>
    <string name="present_balance">可提现余额</string>
    <string name="full_presentation">全部提现</string>
    <string name="bring_new_card">提现至新卡</string>
    <string name="my_wallet">我的钱包</string>
    <string name="magic_bean">魔豆</string>
    <string name="reservation">保存</string>
    <string name="administration">管理</string>
    <string name="coupon">优惠券</string>
    <string name="Selectiontime">选择时间</string>
    <string name="Startdate">请选择开始日期</string>
    <string name="EndDate">请选择结束日期</string>
    <string name="Monthlysettlement">按月计算</string>
    <string name="Bytheday">按日计算</string>
    <string name="entertainment">休闲娱乐</string>
    <string name="bank_insurance">银行保险</string>
    <string name="jewellery">珠宝首饰</string>
    <string name="medicalcare">医疗保健</string>
    <string name="motion">活动健身</string>
    <string name="photography">婚庆摄影</string>
    <string name="car_service">汽车服务</string>
    <string name="trazin">教育培训</string>
    <string name="Big_shot">大咖</string>
    <string name="recommendable_store">推荐门店</string>
    <string name="wechat_alipay">支付宝支付</string>
    <string name="di_san_fang_login">使用以下账号快速登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="reg_agreement">轻触上面的“立即注册”按钮，即表示您同意</string>
    <string name="reg_agreement_name">《女王魔镜用户协议与隐私条件》</string>
    <string name="forgetcipher">忘记密码</string>
    <string name="hintorder">满足您的期待吗？说说它的缺点和美中不足的地方吧。</string>
    <string name="anonymous">匿名</string>
    <string name="anonymousshow">你写的评论会以匿名的形式展现</string>
    <string name="serviceattitude">服务态度</string>
    <string name="tv_commodity_grade">商品评分</string>
    <string name="store_environment">门店环境</string>
    <string name="published_order">发表评论</string>
    <string name="release">发布</string>
    <string name="phone">电话</string>
    <string name="evaluation">评价</string>
    <string name="tips">说说分享心得...</string>
    <string name="rll_footer_hint_normal">上拉加载更多</string>
    <string name="rll_header_hint_normal">下拉更新</string>
    <string name="rll_header_last_time">上次更新时间</string>
    <string name="rll_footer_no_more_data">没有更多了</string>
    <string name="rll_footer_hint_ready">松开加载更多</string>
    <string name="rll_footer_hint_loading">正在努力加载</string>
    <string name="rll_header_hint_ready">松开更新</string>
    <string name="rll_header_hint_loading">正在努力更新</string>
    <string name="rll_header_time_justnow">刚刚</string>
    <string name="rll_header_time_minutes">分钟以前</string>
    <string name="rll_header_time_houxrs">小时以前</string>
    <string name="rll_header_time_days">天以前</string>
    <string name="arefund">申请退款</string>
    <string name="confirm_arefund">确认退款</string>
    <string name="arefund_reason">退款原因</string>
    <string name="tv_arefund_select">请选择</string>
    <string name="_refund_amount">退款金额：</string>
    <string name="refund_instructions">退款说明：</string>
    <string name="refund_credentials">上传凭证</string>
    <string name="city_suzhou">苏州</string>
    <string name="my_address">我的地址</string>
    <string name="MyHomepage">我的主页</string>
    <string name="Modelshop">魔豆商城</string>
    <string name="mondelNumber">我的魔豆数</string>
    <string name="mondelService">魔豆服务</string>
    <string name="exchangeShop">兑换好物</string>
    <string name="user_nickname">昵称</string>
    <string name="modify_payment_password">修改支付密码</string>
    <string name="back_payment_password">找回支付密码</string>
    <string name="add_login_number">请输入登陆账号/手机号</string>
    <string name="add_login_password">请输入登陆密码</string>
    <string name="add_pay_password">请输入支付密码</string>
    <string name="subscribe">在线预约</string>
    <string name="facepay">到店付款</string>
    <string name="startspellorder">开启拼单</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="Nails">美甲</string>
    <string name="pricetobuy">原价购买</string>
    <string name="balance_payment">余额支付</string>
    <string name="paypass">支付密码</string>
    <string name="currentpaypass">当前密码</string>
    <string name="add_currentpay_password">请输入当前密码</string>
    <string name="newpaypass">新密码</string>
    <string name="add_real_name">请输入您的名字</string>
</resources>