<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.ainisi.queenmirror.queenmirrorcduan.ui.home.MainActivity">


    <FrameLayout
        android:id="@+id/fl_main_content_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_0_dip"
        android:fitsSystemWindows="true"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="@dimen/comment_52_dip"
        android:gravity="center"
        android:fitsSystemWindows="true"
        android:background="@color/home_bottom_radio"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_home"
            style="@style/activity_layout"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_bottom_tab_home"
            android:textSize="12sp"
            android:text="@string/home_page" />

        <RadioButton
            android:id="@+id/rb_shop_mall"
            android:layout_height="wrap_content"
            style="@style/activity_layout"
            android:drawableTop="@drawable/selector_bottom_tab_shop_mall"
            android:textSize="12sp"
            android:text="@string/shopping_mall" />

        <RadioButton
            android:id="@+id/rb_order"
            android:layout_height="wrap_content"
            style="@style/activity_layout"
            android:drawableTop="@drawable/selector_bottom_tab_order"
            android:textSize="12sp"
            android:text="@string/order" />

        <RadioButton
            android:id="@+id/rb_master"
            style="@style/activity_layout"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_bottom_tab_master"
            android:textSize="12sp"
            android:text="@string/master" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/activity_layout"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_bottom_tab_mine"
            android:textSize="12sp"
            android:text="我的" />
    </RadioGroup>
</LinearLayout>
